--- a/public/sell-form.html
+++ b/public/sell-form.html
@@ -1,3 +1,4 @@
+<html>
 <form data-netlify="true" id="sell-form" name="sell-form" method="POST" action="/success">
     <div x-cloak x-show="formStep === 1">
         <div class="form-step hide">
@@ -78,3 +79,4 @@
 
     <button x-cloak x-show="formStep === 2" type="submit" class="underline">Claim Your Offer</button>
 </form>
+</html>
